Update cli/src/main/java/com/devonfw/tools/ide/io/ini/IniCommentImpl.java
Co-authored-by: Jörg Hohwiller <hohwille@users.noreply.github.com>